--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ header{
     flex-wrap: wrap;
     width: 100%;
     height: 15vh;
+    
 }
 
 header img{
@@ -234,110 +235,129 @@ nav a:hover{
 }
 
 /*CONTENIDO ACERCA DE*/
-.pestaña-acercade{
-    width: 100%;
+
+.ContenidoAcerdaDe{
     display: flex;
-    
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 100%;
+    flex-wrap: wrap;
+    padding: 1em;
     
 }
 
 
 .tarjeta-acercade{
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 33.33%;
-    height: 75vh;
-    margin: 2.5em;
-    border-radius: 3em ;
-    box-shadow: 0 0 10px white,0 0 10px white;
-    padding: 2em;
-    
+    position: relative;
+    width: 30%;
+    height: 77vh;
+    border-radius: 3em;
+    margin: 0.6em;
 }
-.tarjeta-acercade:hover{
+
+
+
+.front{
     
-    box-shadow: 0 0 10px rgb(0, 183, 255),0 0 10px rgb(0, 183, 255);
-    transition: 0.3s;
-    
-}
-.img-tarjeta{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 60%;
-    height: 50%;
-    margin-top: 2em;
-    margin-bottom: 2em;
-    
-}
-.tarjeta-acercade img{
+    background-size: cover;
+    transform: rotateY(0deg);
+    border-radius: 3em;
+    background-image: var(--i);
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.3);
+    position: absolute;
     width: 100%;
     height: 100%;
-    border-radius: 100%;
-    box-shadow: 0 0 10px rgb(168, 161, 161),0 0 10px rgb(129, 126, 126);
-   
-}
-.tarjeta-acercade h1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 1s;
+    backface-visibility: hidden;
 
-    color: rgb(0, 183, 255);
-    text-align: center;
 }
 
-.tarjeta-acercade p{
-    
-    color: rgb(181, 197, 197);
-    font-size: 20px;
-    text-align: center;
-    
-    
-}
-.tarjeta-acercade a{
-   
-    text-align: center;
-    text-decoration: none;
-    font-size:20px;
-    border: 2px solid rgb(0, 183, 255) ;
-    border-radius: 10px;
-    padding: 15px;
-    color: rgb(0, 183, 255);
-    margin-top: 2em;
-}
-.tarjeta-acercade a:hover{
+.content-tarjet{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 3em;
     color: white;
-    background-color: rgb(0, 183, 255);
-    text-shadow: 0 0 10px, 0 0 10px;
-    box-shadow: 0 0 10px rgb(0, 183, 255),0 0 10px rgb(0, 183, 255);
-    transition: 0.3s;
+    text-align: center;
+    height: 100%;
+    width: 100%;
 }
+
+.btn-front{
+    color: rgb(0, 183, 255);
+    font-size: 23px;
+    text-decoration: underline;
+    cursor: pointer;
+    
+}
+
+.content-tarjet a:hover{
+    text-shadow: 0 0 10px rgb(0, 183, 255), 0 0 10px rgb(0, 183, 255);
+}
+
+.back{
+    background-color: #000000;
+    transform: rotateY(180deg);
+    border-radius: 3em;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 1s;
+    backface-visibility: hidden;
+    box-shadow: 0 0 10px rgb(250, 250, 250),0 0 10px rgb(248, 249, 250);
+}
+
+.btn-back{
+    color: rgb(0, 183, 255);
+    font-size: 23px;
+    text-decoration: underline;
+    cursor: pointer;
+   
+}
+
+.btn-back:hover{
+    text-shadow: 0 0 10px rgb(0, 183, 255), 0 0 10px rgb(0, 183, 255);
+}
+
+.front:hover{
+    box-shadow: 0 0 20px white ;
+}
+
 
 
 @media screen and (max-width:768px){
 
     .header{
         height: 100%;
-        box-shadow: 0 0 5px whitesmoke,0 0 10px whitesmoke;
+        box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.3);
         background: #005C97;  /* fallback for old browsers */
         background: -webkit-linear-gradient(to right, #363795, #005C97);  /* Chrome 10-25, Safari 5.1-6 */
         background: linear-gradient(to right, #363795, #005C97); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         position: sticky;
         top: 0;
-        padding: 0.7em;
-        margin-bottom: 1em;
+        padding: 0.5em;
+        z-index: 100;
         
     }
 
     .header.act{
         background: #005C97;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #363795, #005C97);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #363795, #005C97); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-        box-shadow: 0 0 5px whitesmoke,0 0 10px whitesmoke;
+        background: -webkit-linear-gradient(to right, #363795, #005C97);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #363795, #005C97); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+       
     }
    
     header img{
         width: 55px;
-        height: 65px;
+        height: 55px;
         
     }
     
@@ -402,38 +422,20 @@ nav a:hover{
        }
 
        .imgcontadora{
-        height: 40%;
+        height: 50%;
         width: 100%;
         
        }
        .imgcontadora img{
         width: 60%;
        }
-   
-    
-    
-   
-    .pestaña-acercade{
-        flex-wrap: wrap;
-    }   
-    .tarjeta-acercade{
+
+       
+       .tarjeta-acercade{
         width: 100%;
-        height: 100%;
-        margin: 1em;
-    }
-    .tarjeta-acercade img{
-        width: 200px;
-        height: 200px;
-    }
-    .tarjeta-acercade h1{
-        font-size: 20px;
-    }
-    .tarjeta-acercade p{
-        font-size: 15px;
-    }
-    .tarjeta-acercade a{
-        font-size: 17px;
-        padding: 1em;
-    }
+        height: 60vh;
+       }
+      
+   
    
 }
