--- a/style.css
+++ b/style.css
@@ -305,11 +305,11 @@ nav a:hover{
     transform: rotateY(180deg);
     border-radius: 3em;
     position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     transition: 1s;
     backface-visibility: hidden;
     box-shadow: 0 0 10px rgb(250, 250, 250),0 0 10px rgb(248, 249, 250);
@@ -330,6 +330,76 @@ nav a:hover{
 .front:hover{
     box-shadow: 0 0 20px white ;
 }
+
+.carrousel{
+    width: 100%;
+    height: 100%;
+    padding: 1em;
+    overflow: hidden;
+}
+.carrousel a{
+    display: flex;
+    justify-content: center;
+    height: 10%;
+    align-items: center;
+}
+
+
+.carrousel .principal{
+    width: 400%;
+    height: 80%;
+    display: flex;
+    flex-direction: row;
+    transform: translateX(0%);
+    transition: 1s;
+    
+}
+
+#principal2{
+    width: 500%;
+}
+
+.carrousel .content-carrousel{
+    width: calc( 100%/4 );
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 96%;
+    
+}
+
+.carrousel .puntos{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+    height: 10%;
+}
+
+.carrousel .punto{
+    width: 1em;
+    height: 1em;
+    background-color: aliceblue;
+    border-radius: 100%;
+    box-shadow: 0px 0px 10px rgba(255, 254, 254, 0.5);
+    cursor: pointer;   
+    transition: 0.5s;
+
+}
+.carrousel .punto:hover{
+    background-color: rgb(0, 183, 255);
+    box-shadow: 0 0 5px rgb(0, 183, 255),0 0 5px rgb(0, 183, 255);    
+
+}
+
+.carrousel .punto.activo{
+    background-color: rgb(0, 183, 255);
+    box-shadow: 0px 0px 10px rgba(0, 183, 255, 0.5);
+    
+}
+
 
 
 
