--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ header img{
 }
 
 .nav{
-    width: 80%;
+    width: 75%;
    
 }
 
@@ -73,7 +73,7 @@ header img{
 }
 
 .menu {
-    display: none; 
+    visibility: hidden; 
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -89,9 +89,7 @@ header img{
     color: rgb(181, 197, 197);
 }
 
-.cerrar.mostrar{
-    visibility: visible;
-}
+
 
 
 
@@ -208,7 +206,7 @@ header img{
 
 .imgcontadora img{
     height: 100%;
-    width: 75%;
+    width: 67%;
     margin-bottom: 2em;
 }
 
@@ -297,7 +295,7 @@ nav a:hover{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* background-color: rgba(0, 0, 0, 0.4); */
+    background-color: rgba(0, 0, 0, 0.4);
     border-radius: 3em;
     color: white;
     text-align: center;
@@ -417,7 +415,78 @@ nav a:hover{
     transform: scale(1.7);
 }
 
+/* CONTENIDO CONTACTAME */
 
+.pestaña-contacto{
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.contacto{
+    height: 100%;
+    width: 30%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    background-color: #d0d8e1;
+    border-radius: 3em;
+    text-align: center;
+    padding: 2.5em;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+}
+.perfil-contacto{
+    height: 40%;
+    width: 100%;
+}
+.perfil-contacto img{
+    width: 50%;
+    height: 80%;
+    border-radius: 100%;
+    box-shadow: 0 0 5px #005C97,0 0 5px #005C97;
+}
+.perfil-contacto h3{
+   text-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+   font-size: 23px;
+}
+
+.redes{
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.separacion-redes{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 1em;
+    height: 100%;
+    margin: 0.7em;
+    background-color: #005C97;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+    transition: 1s;
+    cursor: pointer;
+}
+.separacion-redes:hover{
+    transform: scale(1.1);
+    box-shadow: 0px 10px 20px #005C97;
+}
+.separacion-redes a{
+    text-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+    text-decoration: none;
+    font-size: 20px;
+    color:#d0d8e1 ;
+}
+
+.separacion-redes svg{
+    color: #d0d8e1;
+}
 
 
 @media screen and (max-width:768px){
@@ -450,7 +519,10 @@ nav a:hover{
     
     
     .menu{
-        display: block;
+        visibility: visible;
+    }
+    .cerrar.mostrar{
+        visibility: visible;
     }
 
     .navegacion{
@@ -523,6 +595,19 @@ nav a:hover{
         height: 60vh;
        }
       
-   
+       .pestaña-contacto{
+        padding: 1em;
+        height: 85vh;
+       }
+       .contacto{
+        width: 100%;
+        height: 80%;
+        padding: 0.2em;
+       }
+
+       .perfil-contacto img{
+        height: 70%;
+        margin-top: 1em;
+       }
    
 }
