--- a/style.css
+++ b/style.css
@@ -316,7 +316,7 @@ nav a:hover{
 }
 
 .back{
-    background-color: rgba(0, 0, 0, 0.4);;
+    background-color: rgba(0, 0, 0, 0.4);
     transform: rotateY(180deg);
     border-radius: 3em;
     position: absolute;
@@ -432,25 +432,27 @@ nav a:hover{
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    background-color: #d0d8e1;
-    border-radius: 3em;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 2em;
     text-align: center;
     padding: 2.5em;
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 10px 20px rgb(0, 183, 255);
 }
 .perfil-contacto{
     height: 40%;
     width: 100%;
 }
 .perfil-contacto img{
-    width: 50%;
+    width: 45%;
     height: 80%;
     border-radius: 100%;
-    box-shadow: 0 0 5px #005C97,0 0 5px #005C97;
+    background-color: rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 10px 20px #005C97;
 }
 .perfil-contacto h3{
-   text-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+   text-shadow: 0px 10px 20px rgba(0, 0, 0, 0.4);
    font-size: 23px;
+   color: rgb(0, 183, 255);
 }
 
 .redes{
@@ -458,7 +460,7 @@ nav a:hover{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 100%;
+    width: 95%;
 }
 
 .separacion-redes{
@@ -468,7 +470,7 @@ nav a:hover{
     border-radius: 1em;
     height: 100%;
     margin: 0.7em;
-    background-color: #005C97;
+    background-color: rgba(0, 0, 0, 0.4);
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
     transition: 1s;
     cursor: pointer;
@@ -481,7 +483,7 @@ nav a:hover{
     text-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
     text-decoration: none;
     font-size: 20px;
-    color:#d0d8e1 ;
+    color:whitesmoke ;
 }
 
 .separacion-redes svg{
@@ -597,10 +599,11 @@ nav a:hover{
       
        .pestaña-contacto{
         padding: 1em;
+        height: 85vh;
        }
        .contacto{
         width: 100%;
-        height: 100%;
+        height: 90%;
         padding: 0.2em;
        }
 
