--- a/style.css
+++ b/style.css
@@ -417,17 +417,18 @@ nav a:hover{
 
 /* CONTENIDO CONTACTAME */
 
+
 .pestaña-contacto{
     width: 100%;
     height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    padding: 1em;
 }
 .contacto{
     height: 100%;
-    width: 30%;
+    width: 25%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -436,18 +437,18 @@ nav a:hover{
     border-radius: 2em;
     text-align: center;
     padding: 2.5em;
-    box-shadow: 0px 10px 20px rgb(0, 183, 255);
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.3);
 }
 .perfil-contacto{
-    height: 40%;
-    width: 100%;
+    height: 25%;
+    width: 80%;
 }
 .perfil-contacto img{
     width: 45%;
     height: 80%;
     border-radius: 100%;
     background-color: rgba(0, 0, 0, 0.4);
-    box-shadow: 0px 10px 20px #005C97;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.3);
 }
 .perfil-contacto h3{
    text-shadow: 0px 10px 20px rgba(0, 0, 0, 0.4);
@@ -599,16 +600,16 @@ nav a:hover{
       
        .pestaña-contacto{
         padding: 1em;
-        height: 85vh;
+        height: 91vh;
        }
        .contacto{
-        width: 100%;
+        width: 90%;
         height: 90%;
         padding: 0.2em;
        }
 
        .perfil-contacto img{
-        height: 70%;
+        height: 60%;
         margin-top: 1em;
        }
    
