--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ header img{
 .container-btn{
     
     height: 40%;
-    width: 75%;
+    width: 100%;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -178,7 +178,8 @@ header img{
 .botones-presentacion{
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    width: 100%;
    
 }
 
@@ -606,16 +607,15 @@ nav a:hover{
       
        .pestaña-contacto{
         padding: 1em;
-        height: 91vh;
+        height: 90vh;
        }
        .contacto{
-        width: 90%;
+        width: 96%;
         height: 90%;
         padding: 0.2em;
        }
 
        .perfil-contacto img{
-        height: 80%;
         width: 50%;
         margin-top: 1em;
        }
