--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 }
 
 body{
-    background: #FDFDFD;  /* fallback for old browsers */
+    background: rgb(176,176,176);
+    background: linear-gradient(180deg, rgba(176,176,176,1) 35%, rgba(93,93,93,1) 100%);
     font-family: 'Original Surfer', cursive;
 }
 
@@ -34,9 +35,6 @@ header img{
     align-items: center;
     justify-content: center;
     
-    
-    
-    
 }
 
 .nav{
@@ -52,13 +50,13 @@ header img{
 
 .logo strong{
     font-size: 30px;
-    color: #0D1321;
+    color: #262626;
 }
 
 
 .navegacion {
     font-size: 30px;
-    color: #0D1321;
+    color: #4f4f4f;
     text-decoration: none;
     
     
@@ -100,9 +98,9 @@ header img{
 }
 
 .navegacion.activo{
-    color: black;
+    color: #262626;
     text-shadow: 0 0 1.5px,0 0 1.5px;
-    border: 3px solid  #0D1321;
+    border: 3px solid  #262626;
     padding-right: 20px;
     padding-left: 20px;
 }
@@ -148,20 +146,19 @@ header img{
 }
 .presentacion H1{
     font-size: 65px;
-    color:#0D1321 ;
-    
+    color: white;
 }
 
 .presentacion h3{
     font-size: 50px;
-    color:#E7D7C9;
+    color:#e7e7e7;
     
 
 }
 
 .presentacion p{
     font-size: 25px;
-    color: #0D1321;
+    color: #e7e7e7;
     margin-top: 1.5em;
     width: 100%;
     text-align: justify;
@@ -187,10 +184,11 @@ header img{
     text-align: center;
     text-decoration: none;
     font-size: 25px;
-    border: 2px solid #A38F85 ;
+    border: 2px solid #262626;
     border-radius: 10px;
     padding: 15px;
-    color: #A38F85;
+    color: #262626;
+    
     
    
    
@@ -241,9 +239,9 @@ nav a:hover{
 
 .botones-presentacion a:hover{
     color: white;
-    background-color: #A38F85;
+    background-color: #262626;
     text-shadow: 0 0 10px, 0 0 10px;
-    box-shadow: 0 0 10px #A38F85,0 0 10px #A38F85;
+    box-shadow: 0 0 10px #262626,0 0 10px #262626;
     transition: 0.3s;
 }
 
@@ -300,7 +298,7 @@ nav a:hover{
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.4);
     border-radius: 3em;
-    color: #D4B2A7;
+    color: #d1d1d1;
     text-align: center;
     height: 100%;
     width: 100%;
@@ -399,21 +397,21 @@ nav a:hover{
 .carrousel .punto{
     width: 1em;
     height: 1em;
-    background-color: #EDE9E3;
+    background-color: #d1d1d1;
     border-radius: 100%;
-    box-shadow: 0px 0px 10px rgba(255, 254, 254, 0.5);
+    box-shadow: 0px 0px 10px #d1d1d1;
     cursor: pointer;   
     transition: 0.5s;
 
 }
 .carrousel .punto:hover{
-    background-color: black;
-    box-shadow: 0 0 5px #EDE9E3,0 0 5px #EDE9E3;    
+    background-color: #262626;
+    box-shadow: 0 0 5px #262626,0 0 5px #262626;    
 
 }
 
 .carrousel .punto.activo{
-    background-color: #D4B2A7;
+    background-color: #262626;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     transform: scale(1.7);
 }
@@ -423,7 +421,7 @@ nav a:hover{
 
 .pestaña-contacto{
     width: 100%;
-    height: 80vh;
+    height: 85vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -436,7 +434,7 @@ nav a:hover{
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    background-color: rgb(255, 255, 255);
+    background-color: #4f4f4f;
     border-radius: 2em;
     text-align: center;
     padding: 2.5em;
@@ -450,12 +448,12 @@ nav a:hover{
     width: 50%;
     height: 100%;
     border-radius: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.3);
+    background-color: #f6f6f6;
+    box-shadow: -1px 1px 5px #f6f6f6;
 }
 .perfil-contacto h3{
    font-size: 23px;
-   color: black;
+   color: #f6f6f6;
 }
 
 .redes{
@@ -473,24 +471,30 @@ nav a:hover{
     border-radius: 1em;
     height: 100%;
     margin: 0.7em;
-    background-color: #D4B2A7;
+    background-color: #808080;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
     transition: 1s;
     cursor: pointer;
 }
 .separacion-redes:hover{
     transform: scale(1.1);
-    box-shadow: 0px 10px 20px black;
+    box-shadow: 0px 5px 20px #f6f6f6;
 }
 .separacion-redes a{
     text-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
     text-decoration: none;
     font-size: 20px;
-    color:black ;
+    color:#f6f6f6 ;
 }
 
 .separacion-redes svg{
     color: black;
+}
+
+/*SERVICIOS*/
+
+#Servicios{  
+    height: 100vh;
 }
 
 
@@ -499,7 +503,7 @@ nav a:hover{
     .header{
         height: 100%;
         box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.3);
-       background-color: #EDE9E3;
+        background-color: #b0b0b0;
         position: sticky;
         top: 0;
         padding: 0.5em;
@@ -508,7 +512,7 @@ nav a:hover{
     }
 
     .header.act{
-        background-color: #EDE9E3;
+        background-color: #b0b0b0;
        
     }
    
