--- a/style.css
+++ b/style.css
@@ -240,10 +240,10 @@ nav a:hover{
 
 .tarjeta-acercade{
     position: relative;
-    width: 31%;
+    width: 30%;
     height: 85vh;
     border-radius: 3em;
-    margin: 0.3em 0.1em;
+    margin: 0.2em 1em;
     
 }
 
@@ -401,11 +401,12 @@ nav a:hover{
 
 .pestaña-contacto{
     width: 100%;
-    height: 85vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0.5em;
+    
     
 }
 .contacto{
@@ -420,16 +421,17 @@ nav a:hover{
     text-align: center;
     padding: 1em;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.3);
-    margin-bottom: 1em;
+    
 }
 .perfil-contacto{
     height: 25%;
     width: 80%;
-    padding: 1em;
+    
+    
 }
 .perfil-contacto img{
-    height: 10em;
-    width: 10em;
+    height: 7.5em;
+    width: 7.5em;
     border-radius: 100%;
     background-color: #f6f6f6;
     box-shadow: -1px 1px 5px #f6f6f6;
@@ -437,6 +439,7 @@ nav a:hover{
 .perfil-contacto h3{
    font-size: 1.2em;
    color: #f6f6f6;
+
 }
 
 .redes{
@@ -444,7 +447,8 @@ nav a:hover{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 95%;
+    width: 90%;
+    
 }
 
 .separacion-redes{
@@ -458,6 +462,7 @@ nav a:hover{
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     cursor: pointer;
+    
 }
 .separacion-redes:hover{
     transform: scale(1.1);
@@ -496,6 +501,7 @@ nav a:hover{
         top: 0;
         z-index: 100;
         padding: 0em 1em;
+        
     }
 
     .header.act{
@@ -507,11 +513,11 @@ nav a:hover{
     }
 
     .logo img{
-        height: 3em;
-        width: 2em;
+        height: 3.5em;
+        width: 2.5em;
     }
     .logo strong{
-        font-size: 1.6em;
+        font-size: 1.8em;
     }
     .menu{
         visibility: visible;
@@ -537,6 +543,9 @@ nav a:hover{
         width: 100%;
     }
 
+    .navegacion{
+        padding: 0.3em;
+    }
    
     .nav.mostrar{
         display: block;
@@ -545,7 +554,7 @@ nav a:hover{
     .presentacion{
            flex-direction: column-reverse;
            width: 100%;
-           height: 100vh;
+           height: 100%;
         
     }
        
@@ -560,11 +569,11 @@ nav a:hover{
     }
 
     .contenido-letra h3{
-        font-size: 1.4em;
+        font-size: 1.5em;
     }
 
     .contenido-letra p{
-        font-size: 1.2em;
+        font-size: 1.3em;
     }
         
     .container-presentacion{
@@ -573,7 +582,8 @@ nav a:hover{
         
     }
     .container-btn{
-        padding: 0.1em;
+        margin-bottom: 0.6em;
+        margin-top: 1em;
     }
     
     .botones-presentacion a{
@@ -593,17 +603,31 @@ nav a:hover{
     .tarjeta-acercade{
         width: 100%;
         height: 60vh;
+        margin-top: 1em;
        }
       
-       .pestaña-contacto{
-        padding: 1em;
-        height: 94vh;
-       }
-       .contacto{
-        width: 96%;
-        height: 90%;
-        padding: 0.2em;
-       }
+    .pestaña-contacto{
+        padding: 0em 1em;
+        height: 100%;
+    }
+
+    .perfil-contacto{
+        margin-bottom: 3em;
+    }
+    
+    .contacto{
+        width: 100%;
+        height: 100%;
+        margin-top: 1em;
+    }
+
+    .redes{
+        width: 100%;
+    }
+    .separacion-redes{
+        padding: 0.8em;
+    }
+
 
        
 }
