--- a/style.css
+++ b/style.css
@@ -6,9 +6,10 @@
 }
 
 body{
-    background: rgb(0,110,223);
+    background: rgb(119, 136, 153);
     background: linear-gradient(180deg, rgba(0,110,223,1) 33%, rgba(0,74,148,1) 100%);
     font-family: 'Original Surfer', cursive;
+    min-height: 100vh;
 }
 
 /*header*/
@@ -401,7 +402,6 @@ nav a:hover{
 
 .pestaña-contacto{
     width: 100%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -425,7 +425,6 @@ nav a:hover{
 }
 .perfil-contacto{
     height: 25%;
-    
     
 }
 .perfil-contacto img{
@@ -560,7 +559,7 @@ nav a:hover{
     .contenido-letra{
        
         width: 100%;
-        padding: 0.4em;
+        padding: 1em;
     }
 
     .contenido-letra h1{
@@ -582,7 +581,7 @@ nav a:hover{
     }
     .container-btn{
         margin-bottom: 0.8em;
-        margin-top: 4.5em;
+        margin-top: 2em;
     }
     
     .botones-presentacion a{
@@ -606,8 +605,8 @@ nav a:hover{
        }
       
     .pestaña-contacto{
-        padding: 1em 1em;
-        height: 100vh;
+        padding: 1.5em 1em;
+        height: 100%;
     }
 
     .contacto{
